@@ -1,5 +1,0 @@
-[
-    {"key_with_dot_1":"value1_1"},
-    {"key_without_dot_2":"value1_2"},
-    {"key_with_multiple_dots_3": {"key_with_dot_2":"value2_1"}}
-]
