@@ -1,10 +1,0 @@
-{
-    "key_without_dot_l1": {
-        "key_with_dot_l2": 1,
-        "key_with_multiple_dots_l2": 2,
-        "key_without_dot_l2": {
-            "key_with_dot_l3": 3,
-            "key_with_multiple_dots_l3": 4
-        }
-    }
-}
