@@ -21,6 +21,7 @@ https://github.com/elastic/beats/compare/v6.0.0-beta2...master[Check the HEAD di
 - Adding a local keystore to allow user to obfuscate password {pull}5687[5687]
 - Update go-ucfg library to support top level key reference and cyclic key reference for the
   keystore {pull}6098[6098]
+- De dot keys of labels and annotations in kubernetes meta processors to prevent collisions. {pull}6203[6203]
 
 *Auditbeat*
 
@@ -47,7 +48,8 @@ https://github.com/elastic/beats/compare/v6.0.0-beta2...master[Check the HEAD di
 - Rename `golang.heap.system.optained` field to `golang.heap.system.obtained`. {issue}5703[5703]
 - Support haproxy stats gathering using http (additionaly to tcp socket). {pull}5819[5819]
 - De dot keys in jolokia/jmx metricset to prevent collisions. {pull}5957[5957]
-- Support to optionally 'de dot' keys in http/json metricset to prevent collisions. {pull}5957[5957]
+- Support to optionally 'de dot' keys in http/json metricset to prevent collisions. {pull}5970[5970]
+- De dot keys in kubernetes/event metricset to prevent collisions. {pull}6203[6203]
 
 *Packetbeat*
 
